infrastructure/firefly-iii/01-namespace.yaml
# 01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly-iii
