infrastructure/firefly-iii/19-data-importer-service.yaml
# 19-data-importer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-data-importer
  namespace: firefly-iii
spec:
  selector:
    app: firefly-data-importer
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  type: ClusterIP
