infrastructure/firefly-iii/25-firefly-plaid-connector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-plaid-connector-service
  namespace: firefly-iii
spec:
  selector:
    app: firefly-plaid-connector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
