infrastructure/firefly-iii/20-data-importer-ingress.yaml
# 20-data-importer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-data-importer-ingress
  namespace: firefly-iii
spec:
  rules:
  - host: firefly-importer.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firefly-data-importer
            port:
              name: web
